--- a/action.yml
+++ b/action.yml
@@ -9,6 +9,6 @@ outputs:
     description: 'The time we greeted you'
 runs:
   using: 'node16'
-  image: 'dist/index.js'
+  main: 'dist/index.js'
   args:
-    - ${{ inputs.who-to-greet }}
+    - ${{ inputs.run-id }}
