--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@actions/artifact": "^1.1.1",
     "@actions/core": "^1.10.0",
     "@actions/glob": "^0.4.0",
+    "ejs": "^3.1.9",
     "jest": "^29.6.4",
     "prettier": "^3.0.3"
   },
